<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mpesaCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="10dp"
        android:padding="20dp"
        card_view:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/bonga_dial"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/mbonga_step1"/>
        <ImageView
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dial"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryLightipay"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mbonga_step2"
        android:padding="16dp"/>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryLightipay"/>


    <LinearLayout
        android:id="@+id/bonga_copy_paybill"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_weight="1"
        android:id="@+id/bonga_paybill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mbonga_step3"
        android:padding="8dp"/>

    <ImageView
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/copy"/>

    </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryLightipay"/>


    <LinearLayout
        android:id="@+id/bonga_copy_account"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_weight="1"
        android:id="@+id/bonga_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mbonga_step4"
        android:padding="8dp"/>

    <ImageView
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/copy"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryLightipay"/>


    <LinearLayout
        android:id="@+id/bonga_copy_amount"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_weight="1"
        android:id="@+id/bonga_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mbonga_step5"
        android:padding="8dp"/>

    <ImageView
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/copy"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryLightipay"/>


    <TextView
        android:id="@+id/bonga_confirm_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mbonga_step6"
        android:padding="16dp"/>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryLightipay"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mbonga_step7"
        android:padding="16dp"/>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryLightipay"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mbonga_step8"
        android:padding="16dp"/>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryLightipay"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mbonga_step9"
        android:padding="16dp"/>

    <Button
        android:id="@+id/confirm_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="Confirm Payment Done"/>
        
    <ImageView
        android:id="@+id/back"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
